tests/qd/errors/invalid_type_string.qd
fn test( s:string -- result:str ) {
    // Should fail - 'string' is not a valid type
}

fn main() {
    "hello" test .
}
